[package]
name = "view-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
caps = "0.5.6"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
# Need features that have not been released yet
fuser = { git = "https://github.com/cberner/fuser.git", rev = "35732aad757661c4d1bdc8993d6c110576197690" }
log = "0.4.33"
nix = { version= "0.31.3", features = ["fs", "user", "socket", "mount", "process", "ioctl", "signal"] }
nom = "8.0.0"
parking_lot = "0.12.5"
slotmap = "1.1.1"
walkdir = "2.5.0"
